; ModuleID = '/home/carl/AnghaBench/git/extr_unpack-trees.c_keep_entry.c'
source_filename = "/home/carl/AnghaBench/git/extr_unpack-trees.c_keep_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }
%struct.unpack_trees_options = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cache_entry*, %struct.unpack_trees_options*)* @keep_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @keep_entry(%struct.cache_entry* %0, %struct.unpack_trees_options* %1) #0 {
  %3 = alloca %struct.cache_entry*, align 8
  %4 = alloca %struct.unpack_trees_options*, align 8
  store %struct.cache_entry* %0, %struct.cache_entry** %3, align 8
  store %struct.unpack_trees_options* %1, %struct.unpack_trees_options** %4, align 8
  %5 = load %struct.unpack_trees_options*, %struct.unpack_trees_options** %4, align 8
  %6 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %7 = call i32 @add_entry(%struct.unpack_trees_options* %5, %struct.cache_entry* %6, i32 0, i32 0)
  %8 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %9 = call i64 @ce_stage(%struct.cache_entry* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %13 = load %struct.unpack_trees_options*, %struct.unpack_trees_options** %4, align 8
  %14 = call i32 @invalidate_ce_path(%struct.cache_entry* %12, %struct.unpack_trees_options* %13)
  br label %15

15:                                               ; preds = %11, %2
  ret i32 1
}

declare dso_local i32 @add_entry(%struct.unpack_trees_options*, %struct.cache_entry*, i32, i32) #1

declare dso_local i64 @ce_stage(%struct.cache_entry*) #1

declare dso_local i32 @invalidate_ce_path(%struct.cache_entry*, %struct.unpack_trees_options*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
